# pj-zipline

./: .gitignore  README.md  pyproject.toml
.gemini/: GEMINI.md
.gemini/.tmp/: design.md  requirements.md  task.md
.github/workflows/: biome.yml  coderabbit.yml
backend/: README.md
backend/src/project/: settings.py  urls.py
backend/src/task/: models.py  serializers.py  views.py
backend/src/task/migrations/: 0001_initial.py  0002_alter_task_status.py  0003_task_parent_task.py  0003_task_parent_task_alter_task_status.py  0004_alter_task_parent_task.py
docs/: features.md  table_design.md  tech_stack.md
frontend/: README.md  biome.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: app.css  routes.ts
frontend/app/features/tasks/: types.ts
frontend/app/features/tasks/api/: create-task.ts  get-tasks.ts  update-task.ts
frontend/app/features/tasks/components/: TaskDescriptionModal.tsx  TaskEditModal.tsx  TaskForm.tsx  TaskGraph.tsx  TaskList.tsx  TaskMoveModal.tsx  TaskStatusEditModal.tsx
frontend/app/features/toolbar/components/: Toolbar.tsx
frontend/app/hooks/: useApi.ts
frontend/app/routes/: home.tsx  layout.tsx  taskview.tsx
frontend/app/routes/tasks/: graph.tsx  layout.tsx  taskform.tsx  taskview.tsx
frontend/app/utils/: utils.tsx
