[project]
name = "pj-zipline"
version = "0.1.0"
description = ""
authors = [
    {name = "ta-muu",email = "122217578+ta-muu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
